--- a/vehicle.html
+++ b/vehicle.html
@@ -1,97 +1,126 @@
-    <h2 class="card-title">Controle de Veículos</h2>
-    <p class="card-text">Selecione o tipo de veículo:</p>
-    <div class="form-group">
-      <label for="vehicleType">Tipo de Veículo:</label>
-      <select id="vehicleType" class="form-control">
-        <option value="" selected>- Escolha o tipo -</option>
-        <option value="carro">Carro</option>
-        <option value="moto">Moto</option>
-      </select>
-    </div>
-    <div id="vehicleForm" class="mt-3"></div>
-    <button id="saveVehicle" class="btn btn-dark">Salvar Veículo</button>
-  </div>
+<div class="card mb-4">
+<h2 class="card-title">Controle de Veículos</h2>
+<p class="card-text">Selecione o tipo de veículo:</p>
+<div class="form-group">
+  <label for="vehicleType">Tipo de Veículo:</label>
+  <select id="vehicleType" class="form-control">
+    <option value="" selected>- Escolha o tipo -</option>
+    <option value="carro">Carro</option>
+    <option value="moto">Moto</option>
+  </select>
+</div>
+<div id="vehicleForm" class="mt-3"></div>
+<button id="saveVehicle" class="btn btn-dark">Salvar Veículo</button>
 
-  <script>
-    // Função para exibir o formulário de Carro
-    function showCarForm() {
-      var form = `
-        <div class="form-group">
-          <label for="model">Modelo:</label>
-          <input type="text" id="model" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="year">Ano de Fabricação:</label>
-          <input type="text" id="year" class="form-control">
-        </div>
-        <div class="form-group" style="cursor: pointer;">
-          <label>Quantidade de Portas:</label>
-          <select id="doors" class="form-control" style="cursor: pointer;">
-            <option value="2">2</option>
-            <option value="4">4</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="brand">Marca:</label>
-          <input type="text" id="brand" class="form-control">
-        </div>
-      `;
-      $('#vehicleForm').html(form);
+<script>
+  // Função para exibir o formulário de Carro
+  function showCarForm() {
+    var form = `
+      <div class="form-group">
+        <label for="model">Modelo:</label>
+        <input type="text" id="model" class="form-control">
+      </div>
+      <div class="form-group">
+     <label for="year">Ano de Fabricação:</label>
+     <input type="number" id="year" class="form-control" step="1" min="1920" max="2024" value="2023">
+</div>
+
+      <div class="form-group" style="cursor: pointer;">
+        <label for="doors">Quantidade de Portas:</label>
+        <select id="doors" class="form-control" style="cursor: pointer;">
+          <option value="2">2</option>
+          <option value="4">4</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="brand">Marca:</label>
+        <input type="text" id="brand" class="form-control">
+      </div>
+    `;
+    $("#vehicleForm").html(form);
+  }
+
+  // Função para exibir o formulário de Moto
+  function showMotoForm() {
+    var form = `
+      <div class="form-group">
+        <label for="wheels">Rodas:</label>
+        <input type="text" id "wheels" class="form-control" value="2" readonly disabled>
+      </div>
+      <div class="form-group" style="cursor: pointer;">
+        <label for="passengers">Passageiros:</label>
+        <select id="passengers" class="form-control" style="cursor: pointer;">
+          <option value="1">1</option>
+          <option value="2">2</option>
+        </select>
+      </div>
+    `;
+    $("#vehicleForm").html(form);
+  }
+
+  // Evento de seleção do tipo de veículo
+  $("#vehicleType").change(function () {
+    var selectedType = $(this).val();
+    if (selectedType === "carro") {
+      showCarForm();
+    } else if (selectedType === "moto") {
+      showMotoForm();
+    } else {
+      $("#vehicleForm").html(""); // Limpar o formulário se "Escolha o tipo" for selecionado
     }
+  });
 
-    // Função para exibir o formulário de Moto
-    function showMotoForm() {
-      var form = `
-        <div class="form-group">
-          <label for="wheels">Rodas:</label>
-          <input type="text" id="wheels" class="form-control" value="2" readonly disabled>
-        </div>
-        <div class="form-group" style="cursor: pointer;">
-          <label>Passageiros:</label>
-          <select id="passengers" class="form-control" style="cursor: pointer;">
-            <option value="1">1</option>
-            <option value="2">2</option>
-          </select>
-        </div>
-      `;
-      $('#vehicleForm').html(form);
-    }
+  // Evento de salvamento do veículo
+  $("#saveVehicle").click(function () {
+    // Obtenha os dados do formulário com base no tipo selecionado e salve em um arquivo JSON
+    var selectedType = $("#vehicleType").val();
+    var vehicleData = {};
 
-    // Evento de seleção do tipo de veículo
-    $('#vehicleType').change(function () {
-      var selectedType = $(this).val();
-      if (selectedType === 'carro') {
-        showCarForm();
-      } else if (selectedType === 'moto') {
-        showMotoForm();
+    if (selectedType === "carro") {
+      var model = $("#model").val();
+      var year = $("#year").val();
+      var doors = $("#doors").val();
+      var brand = $("#brand").val();
+
+      // Verifique se todos os campos estão preenchidos
+      if (model && year && doors && brand) {
+        vehicleData = {
+          tipo: "Carro",
+          modelo: model,
+          ano: year,
+          portas: doors,
+          marca: brand,
+        };
+
+        // Converta os dados em um objeto JSON
+        var vehicleJSON = JSON.stringify(vehicleData);
+
+        // Agora você pode salvar ou usar o objeto JSON
+        console.log(vehicleJSON);
       } else {
-        $('#vehicleForm').html(''); // Limpar o formulário se "Escolha o tipo" for selecionado
+        alert("Por favor, preencha todos os campos antes de salvar.");
       }
-    });
+    } else if (selectedType === "moto") {
+      var passengers = $("#passengers").val();
 
-    // Evento de salvamento do veículo
-    $('#saveVehicle').click(function () {
-      // Obtenha os dados do formulário com base no tipo selecionado e salve em um arquivo JSON
-      var selectedType = $('#vehicleType').val();
-      var vehicleData = {};
+      // Verifique se todos os campos estão preenchidos
+      if (passengers) {
+        vehicleData = {
+          tipo: "Moto",
+          rodas: "2",
+          passageiros: passengers,
+        };
 
-      if (selectedType === 'carro') {
-        vehicleData = {
-          tipo: 'Carro',
-          modelo: $('#model').val(),
-          ano: $('#year').val(),
-          portas: $('#doors').val(),
-          marca: $('#brand').val(),
-        };
-      } else if (selectedType === 'moto') {
-        vehicleData = {
-          tipo: 'Moto',
-          rodas: '2',
-          passageiros: $('#passengers').val(),
-        };
+        // Converta os dados em um objeto JSON
+        var vehicleJSON = JSON.stringify(vehicleData);
+
+        // Agora você pode salvar ou usar o objeto JSON
+        console.log(vehicleJSON);
+      } else {
+        alert("Por favor, preencha todos os campos antes de salvar.");
       }
-
-      // Salve os dados em um arquivo JSON (você pode implementar essa parte)
-      console.log(vehicleData);
-    });
-  </script>
+    } else {
+      alert("Por favor, selecione o tipo de veículo.");
+    }
+  });
+</script>
