--- a/vehicle.html
+++ b/vehicle.html
@@ -1,16 +1,22 @@
-<div class="card mb-4">
-<h2 class="card-title">Controle de Veículos</h2>
-<p class="card-text">Selecione o tipo de veículo:</p>
-<div class="form-group">
-  <label for="vehicleType">Tipo de Veículo:</label>
-  <select id="vehicleType" class="form-control">
-    <option value="" selected>- Escolha o tipo -</option>
-    <option value="carro">Carro</option>
-    <option value="moto">Moto</option>
-  </select>
-</div>
-<div id="vehicleForm" class="mt-3"></div>
-<button id="saveVehicle" class="btn btn-dark">Salvar Veículo</button>
+  <div class="card mb-4">
+    <div class="card-body">
+      <h2 class="card-title">Controle de Veículos</h2>
+      <p class="card-text">Selecione o tipo de veículo:</p>
+      <div class="form-group">
+        <label for="vehicleType">Tipo de Veículo:</label>
+        <select id="vehicleType" class="form-control">
+          <option value="" selected>- Escolha o tipo -</option>
+          <option value="carro">Carro</option>
+          <option value="moto">Moto</option>
+        </select>
+      </div>
+
+      <!-- Conteúdo específico para veículo -->
+      <div id="vehicleForm" class="mt-3"></div>
+      <button id="saveVehicle" class="btn btn-dark">Salvar Veículo</button>
+    </div>
+  </div>
+
 
 <script>
   // Função para exibir o formulário de Carro
