--- a/html/address.html
+++ b/html/address.html
@@ -4,7 +4,7 @@
 
   <div class="form-group">
     <label for="cep">CEP:</label>
-    <input type="text" id="cep" class="form-control">
+    <input type="text" id="cep" class="form-control" onkeyup="handleKeyPress(event)">
   </div>
   <button onclick="fetchCepData()" class="btn btn-dark">Obter Informações</button>
   <div id="cepResults" class="mt-3">
@@ -53,4 +53,5 @@
       }
     });
   }
+
 </script>
