--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/palindrome.css">  
+  <link rel="stylesheet" type="text/css" href="css/palindrome.css">
 </head>
 <body style="font-family: 'Poppins', sans-serif;">
 
@@ -28,7 +28,7 @@
           <div class="form-group">
             <label for="end">Fim do intervalo:</label>
             <input type="text" id="end" class="form-control">
-          </div>
+          </div>          
           <button onclick="findPalindromes()" class="btn btn-dark">Encontrar Palíndromos</button>
           <div id="palindromeResults" class="mt-3"></div>
           <button id="showMore" style="display: none;" onclick="showMorePalindromes()" class="btn btn-dark">Mostrar Mais</button>
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-       
+
     <div class="col-md-12">
       <div id="vehicleCard">
         <div class="card-body">
@@ -66,7 +66,7 @@
       <div class="card mb-4">
         <div class="card-body">
           <h2 class="card-title">Endereço</h2>
-          <p class="card-text">Informe um CEP por vez e obtenha informações:</p>
+          <p class="card-text">Informe seu CEP:</p>
           <div class="form-group">
             <label for="cep">CEP:</label>
             <input type="text" id="cep" class="form-control">
@@ -92,7 +92,7 @@
 
 <!-- Carregue o conteúdo do vehicle.html no terceiro card -->
 <script>
-  $(document).ready(function () {
+  document.addEventListener("DOMContentLoaded", function() {
     $.ajax({
       url: 'html/vehicle.html',
       dataType: 'html',
@@ -100,10 +100,8 @@
         $('#vehicleCard').html(data);
       }
     });
-  });
 
-  // Carregue o conteúdo do address.html no quarto card
-  $(document).ready(function () {
+    // Carregue o conteúdo do address.html no quarto card
     $.ajax({
       url: 'html/address.html',
       dataType: 'html',
@@ -112,8 +110,8 @@
       }
     });
   });
-
 </script>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2pKZ2VzIrojoSkx0lY5OWAxVyNn0oHJc&callback=initMap" async defer></script>
 </body>
 </html>
