--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>          
           <button onclick="findPalindromes()" class="btn btn-dark">Encontrar Palíndromos</button>
           <div id="palindromeResults" class="mt-3"></div>
-          <button id="showMore" style="display: none;" onclick="showMorePalindromes()" class="btn btn-dark">Mostrar Mais</button>
+          <button id="showMore" style="display: none;" onclick="showMorePalindromes()" class="btn btn-dark">+</button>
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
   </div>
 </div>
 
-<div id="map" style="width: 100%; height: 350px; position: fixed; bottom: 0; left: 0;"></div>
+<div id="map" style="width: 100%; height: 390px; position: fixed; bottom: 0; left: 0;"></div>
 
 <!-- Bootstrap JavaScript (jQuery and Popper.js required) -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
