--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="form-group">
             <label for="end">Fim do intervalo:</label>
             <input type="text" id="end" class="form-control">
-          </div>          
+          </div>
           <button onclick="findPalindromes()" class="btn btn-dark">Encontrar Palíndromos</button>
           <div id="palindromeResults" class="mt-3"></div>
           <button id="showMore" style="display: none;" onclick="showMorePalindromes()" class="btn btn-dark">+</button>
@@ -88,8 +88,17 @@
 <script src="js/calculateChange.js"></script>
 <script src="js/vehicle.js"></script>
 <script src="js/maps.js"></script>
+<script src="script.js"></script>
 
 <!-- Carregue o conteúdo do vehicle.html no terceiro card -->
+<script>
+function handleEnterKeyPress(event, actionFunction) {
+  if (event.keyCode === 13) {
+    event.preventDefault();
+    actionFunction();
+  }
+}
+</script>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
     $.ajax({
