--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Desafio Frontend</title>
   <meta charset="utf-8">
+  <link rel="icon" href="img/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Google Fonts - Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
