--- a/html/vehicle.html
+++ b/html/vehicle.html
@@ -6,32 +6,19 @@
       <label for="vehicleType">Tipo de Veículo:</label>
       <select id="vehicleType" class="form-control">
         <option value="" selected>- Escolha o tipo -</option>
-        <option value="carro">Carro</option>
-        <option value="moto">Moto</option>
+        <option value="Carro">Carro</option>
+        <option value="Moto">Moto</option>
       </select>
     </div>
-
-    <!-- Conteúdo específico para veículo -->
-    <div id="vehicleForm" class="mt-3"></div>
-    <button id="saveVehicle" class="btn btn-dark">Salvar Veículo</button>
-  </div>
-</div>
-
-
-<script>
-// Função para exibir o formulário de Carro
-function showCarForm() {
-  var form = `
     <div class="form-group">
       <label for="model">Modelo:</label>
       <input type="text" id="model" class="form-control">
     </div>
     <div class="form-group">
-   <label for="year">Ano de Fabricação:</label>
-   <input type="number" id="year" class="form-control" step="1" min="1920" max="2024" value="2023">
-</div>
-
-    <div class="form-group" style="cursor: pointer;">
+      <label for="year">Ano de Fabricação:</label>
+      <input type="number" id="year" class="form-control" step="1" min="1920" max="2024" value="2023">
+    </div>
+    <div class="form-group" style="cursor: pointer;" id="doorsGroup">
       <label for="doors">Quantidade de Portas:</label>
       <select id="doors" class="form-control" style="cursor: pointer;">
         <option value="2">2</option>
@@ -42,92 +29,107 @@ function showCarForm() {
       <label for="brand">Marca:</label>
       <input type="text" id="brand" class="form-control">
     </div>
-  `;
-  $("#vehicleForm").html(form);
-}
-
-// Função para exibir o formulário de Moto
-function showMotoForm() {
-  var form = `
-    <div class="form-group">
-      <label for="wheels">Rodas:</label>
-      <input type="text" id "wheels" class="form-control" value="2" readonly disabled>
+    <div class="form-group" style="cursor: not-allowed;" id="wheelsGroup">
+      <label for="wheels">Quantidade de Rodas:</label>
+      <select id="wheels" class="form-control" style="cursor: not-allowed;" disabled>
+        <option value="2" selected>2</option>
+      </select>
     </div>
-    <div class="form-group" style="cursor: pointer;">
+    <div class="form-group" style="cursor: pointer;" id="passengersGroup">
       <label for="passengers">Passageiros:</label>
       <select id="passengers" class="form-control" style="cursor: pointer;">
         <option value="1">1</option>
         <option value="2">2</option>
       </select>
     </div>
-  `;
-  $("#vehicleForm").html(form);
-}
+    <button id="saveVehicle" class="btn btn-dark">Salvar Veículo</button>
+  </div>
+</div>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script>
 // Evento de seleção do tipo de veículo
 $("#vehicleType").change(function () {
   var selectedType = $(this).val();
-  if (selectedType === "carro") {
-    showCarForm();
-  } else if (selectedType === "moto") {
-    showMotoForm();
+  var doorsGroup = $("#doorsGroup");
+  var passengersGroup = $("#passengersGroup");
+  var wheelsGroup = $("#wheelsGroup");
+
+  // Mostrar ou ocultar campos com base na seleção
+  if (selectedType === "Carro") {
+    doorsGroup.show();
+    passengersGroup.hide();
+    wheelsGroup.hide();
+  } else if (selectedType === "Moto") {
+    doorsGroup.hide();
+    passengersGroup.show();
+    wheelsGroup.show();
   } else {
-    $("#vehicleForm").html(""); // Limpar o formulário se "Escolha o tipo" for selecionado
+    doorsGroup.hide();
+    passengersGroup.hide();
+    wheelsGroup.hide();
   }
 });
 
 // Evento de salvamento do veículo
 $("#saveVehicle").click(function () {
-    var selectedType = $("#vehicleType").val();
-    var vehicleData = {};
+  var selectedType = $("#vehicleType").val();
+  var vehicleData = {};
 
-    if (selectedType === "carro") {
-      var model = $("#model").val();
-      var year = $("#year").val();
-      var doors = $("#doors").val();
-      var brand = $("#brand").val();
+  if (selectedType === "Carro") {
+    var model = $("#model").val();
+    var year = $("#year").val();
+    var doors = $("#doors").val();
+    var brand = $("#brand").val();
 
-      // Verifique se todos os campos estão preenchidos
-      if (model && year && doors && brand) {
-        vehicleData = {
-          tipo: "Carro",
-          modelo: model,
-          ano: year,
-          portas: doors,
-          marca: brand,
-        };
+    // Verifique se todos os campos estão preenchidos
+    if (model && year && doors && brand) {
+      vehicleData = {
+        tipo: "Carro",
+        modelo: model,
+        ano: year,
+        portas: doors,
+        marca: brand,
+      };
 
-        var vehicleJSON = JSON.stringify(vehicleData);
+      var vehicleJSON = JSON.stringify(vehicleData);
 
-        console.log(vehicleJSON);
+      console.log(vehicleJSON);
 
-        // Exiba um alerta de sucesso
-        alert("Veículo salvo com sucesso!");
-      } else {
-        alert("Por favor, preencha todos os campos antes de salvar.");
-      }
-    } else if (selectedType === "moto") {
-      var passengers = $("#passengers").val();
-
-      // Verifique se todos os campos estão preenchidos
-      if (passengers) {
-        vehicleData = {
-          tipo: "Moto",
-          rodas: "2",
-          passageiros: passengers,
-        };
-
-        var vehicleJSON = JSON.stringify(vehicleData);
-
-        console.log(vehicleJSON);
-
-        // Exiba um alerta de sucesso
-        alert("Veículo salvo com sucesso!");
-      } else {
-        alert("Por favor, preencha todos os campos antes de salvar.");
-      }
+      // Exiba um alerta de sucesso
+      alert("Veículo salvo com sucesso!");
     } else {
-      alert("Por favor, selecione o tipo de veículo.");
+      alert("Por favor, preencha todos os campos antes de salvar.");
     }
-  });
+  } else if (selectedType === "Moto") {
+    var model = $("#model").val();
+    var year = $("#year").val();
+    var passengers = $("#passengers").val();
+    var brand = $("#brand").val();
+
+    // Verifique se todos os campos estão preenchidos
+    if (model && year && passengers && brand) {
+      vehicleData = {
+        tipo: "Moto",
+        rodas: "2",
+        passageiros: passengers,
+        modelo: model,
+        ano: year,
+        marca: brand,
+      };
+
+      var vehicleJSON = JSON.stringify(vehicleData);
+
+      console.log(vehicleJSON);
+
+      // Exiba um alerta de sucesso
+      alert("Veículo salvo com sucesso!");
+    } else {
+      alert("Por favor, preencha todos os campos antes de salvar.");
+    }
+  } else {
+    alert("Por favor, selecione o tipo de veículo.");
+  }
+});
 </script>
